--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 53 points<br>
+Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 57 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -28,6 +28,7 @@ Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
@@ -35,23 +36,23 @@ Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
+     30 rebase
      27 --git-dir=.git
-     25 rebase
-     21 status
-     21 log
-     19 checkout
-     15 difftool
+     26 status
+     24 log
+     20 checkout
+     18 difftool
      15 branch
-     13 help
+     14 help
      12 reset
+      9 mergetool
+      8 add
       7 commit
-      7 add
+      7 clean
       6 push
       6 achievements
-      5 clean
+      5 --git-dir=/home/stavros/git/otp/.git
       4 pull
-      4 mergetool
-      3 --git-dir=/home/stavros/git/otp/.git
       2 rev-parse
       2 gc
       2 blame
