--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
 <h2>Stavros Aronis's Git Achievements</h2>
-Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 57 points<br>
+Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 61 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
@@ -36,18 +37,18 @@ Unlocked 12/50 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     30 rebase
+     31 rebase
+     29 status
      27 --git-dir=.git
-     26 status
      24 log
      20 checkout
-     18 difftool
+     19 difftool
      15 branch
      14 help
      12 reset
+     10 add
       9 mergetool
-      8 add
-      7 commit
+      8 commit
       7 clean
       6 push
       6 achievements
